--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,10 @@
 
 		<style>
 			*{
+				body{
+					height: 1000px;
+				};
+				
 				font-family: 'Roboto', Helvetica, sans-serif;
 			}
 		</style>
